--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "bower-files": "^4.0.0",
+    "browser-sync": "^2.23.2",
     "browserify": "^14.5.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -19,5 +20,8 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.5",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "syllable": "^3.0.0"
   }
 }
